@@ -47,6 +47,9 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <jvmArguments>--add-modules jdk.jdi</jvmArguments>
+                </configuration>
             </plugin>
         </plugins>
     </build>
